--- a/public/profile.html
+++ b/public/profile.html
@@ -401,6 +401,7 @@
             cursor: pointer;
             transition: background-color 0.2s ease, transform 0.15s ease;
             text-decoration: none;
+            margin-top: 8px; /* 🔹 добавил отступ */
         }
         .reward-how-to-use-btn i {
             font-size: 13px;
@@ -410,31 +411,7 @@
         }
         .reward-how-to-use-btn:active {
             transform: scale(0.96);
-        }
-        .reward-how-to-use-btn {
-            display: inline-flex;
-            align-items: center;
-            gap: 6px;
-            background-color: rgba(255, 255, 255, 0.08);
-            color: var(--action-color);
-            border: none;
-            border-radius: 6px;
-            font-size: 12px;
-            font-weight: 500;
-            padding: 5px 10px;
-            cursor: pointer;
-            transition: background-color 0.2s ease, transform 0.15s ease;
-            text-decoration: none;
-        }
-        .reward-how-to-use-btn i {
-            font-size: 13px;
-        }
-        .reward-how-to-use-btn:hover {
-            background-color: rgba(255, 255, 255, 0.15);
-        }
-        .reward-how-to-use-btn:active {
-            transform: scale(0.96);
-        }     
+        }   
     </style>
 </head>
 <body>
