--- a/public/profile.html
+++ b/public/profile.html
@@ -670,7 +670,7 @@ try {
                             <input type="text" class="reward-card-code-input" value="${reward.code}" readonly>
                             <button class="reward-card-copy-btn" title="Копировать"><i class="fa-regular fa-copy"></i></button>
                         </div>
-                    <button class="reward-how-to-use-btn" data-gif="${reward.gif_url || '/static/how_to_use.gif'}">
+                    <button class="reward-how-to-use-btn" data-gif="https://i.postimg.cc/k4WyP04y/IMG-9212.gif">
                         <i class="fa-solid fa-circle-question"></i> Где использовать?
                     </button>
                         <p class="reward-card-meta">Получено: ${formattedDateTime}</p>
