--- a/public/profile.html
+++ b/public/profile.html
@@ -506,7 +506,9 @@
     <div id="how-to-use-popup" class="custom-popup-overlay">
         <div class="custom-popup">
             <h3>Как использовать код?</h3>
-            <p style="margin-bottom:10px;">Смотрите инструкцию ниже:</p>
+            <p style="margin-bottom:10px;">
+                Активируйте свой промокод через бота: нажмите <strong>❤️ Активировать промокод</strong> и введите код, чтобы получить награду.
+            </p>
             <img id="how-to-use-gif" src="" alt="Инструкция" style="width:100%; border-radius:10px;">
             <div class="popup-actions" style="margin-top:15px;">
                 <button id="how-to-use-close" class="popup-btn primary">Понятно</button>
