--- a/public/menu.html
+++ b/public/menu.html
@@ -48,7 +48,10 @@
         </div>
       </div>
     </div>
+    <div class="main-content">
+    <h2 class="custom-title">Активные ивенты канала</h2>
     
+    </div>
     <div id="view-dashboard" class="view">
         <div id="main-slider-container" class="slider-container">
             <div class="slider-wrapper">
