--- a/public/admin.html
+++ b/public/admin.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
-  <link rel="stylesheet" href="admin.css">
+  <link rel="stylesheet" href="/admin.css">
 </head>
 <body>
 
@@ -100,6 +100,6 @@
         </div>
     </div>
     
-    <script src="admin.js"></script>
+    <script src="/admin.js"></script>
 </body>
 </html>
