--- a/public/admin.html
+++ b/public/admin.html
@@ -100,6 +100,6 @@
         </div>
     </div>
     
-    <script src="/admin.js"></script>
+    <script src="/admin.js" defer></script>
 </body>
 </html>
