--- a/public/admin.html
+++ b/public/admin.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
-  <link rel="stylesheet" href="/admin.css">
+  <link rel="stylesheet" href="admin.css">
 </head>
 <body>
 
@@ -120,6 +120,6 @@
     <div id="twitch-purchases-modal" class="modal-overlay hidden">...</div>
     <div id="twitch-reward-settings-modal" class="modal-overlay hidden">...</div>
 
-    <script src="/admin.js" defer></script>
+    <script src="admin.js" defer></script>
 </body>
 </html>
