--- a/public/menu.html
+++ b/public/menu.html
@@ -55,8 +55,8 @@
                 <a href="/events" class="slide">
                     <img id="menu-banner-img" src="https://i.postimg.cc/d0r554hc/1200-600.png?v=2" alt="Гонка за скинами">
                 </a>
-                <a href="#" class="slide">
-                    <img src="https://i.postimg.cc/CKKLsnVw/1200-600-hallowen.png" alt="Скоро">
+               <a href="/halloween" class="slide" data-event="cauldron" style="display: none;">
+                    <img src="https://i.postimg.cc/CKKLsnVw/1200-600-hallowen.png" alt="Хэллоуин Ивент">
                 </a>
             </div>
             <button id="slide-prev-btn" class="slider-arrow prev"><i class="fa-solid fa-chevron-left"></i></button>
