--- a/public/admin.html
+++ b/public/admin.html
@@ -524,8 +524,8 @@
                     <label>URL страницы ивента</label>
                     <input type="text" name="event_page_url" required value="/halloween" placeholder="/halloween">
 
-                    <label>Названия наград Twitch (триггеры, каждое с новой строки)</label>
-                    <textarea name="twitch_reward_trigger_titles" rows="4" placeholder="Ингредиент в котел&#10;Маленький вклад&#10;Еще один вклад"></textarea>
+                    <label>Награды Twitch для котла (формат: Название:Кол-во)</label>
+                    <textarea name="twitch_reward_trigger_titles" rows="4" placeholder="Ингредиент в котел:10&#10;Маленький вклад:50&#10;Щедрый вклад:250"></textarea>
 
                     <label>URL картинки котла (на стр. ивента)</label>
                     <input type="text" name="cauldron_image_url" placeholder="https://....png">
