--- a/public/halloween.html
+++ b/public/halloween.html
@@ -14,6 +14,11 @@
     </div>
 
     <main id="app-container" class="main-content hidden">
+        <div id="admin-notice" class="admin-notice hidden">
+            <i class="fa-solid fa-eye-slash"></i>
+            <span>Режим администратора: ивент скрыт для обычных пользователей.</span>
+        </div>
+
         <header class="page-header">
             <a href="/menu" class="back-button"><i class="fa-solid fa-arrow-left"></i> Меню</a>
             <h1 id="event-title" class="page-header-title">Ведьминский Котел</h1>
