--- a/public/admin.html
+++ b/public/admin.html
@@ -70,6 +70,10 @@
                         <div class="icon-wrapper" style="color: var(--warning-color);"><i class="fa-solid fa-dice"></i></div>
                         <span>Рулетки</span>
                     </div>
+                     <div class="admin-icon-button" data-view="view-admin-statistics">
+                        <div class="icon-wrapper" style="color: var(--primary-color);"><i class="fa-solid fa-chart-line"></i></div>
+                        <span>Статистика</span>
+                    </div>
                     <a href="/roulette.html" target="_blank" class="admin-icon-button">
                         <div class="icon-wrapper"><i class="fa-solid fa-eye"></i></div>
                         <span>Просмотр рулетки</span>
@@ -622,7 +626,6 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </main>
 
